# sword-growing-kakao

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
scripts/: build.bat  build.sh
src/: __init__.py  main.py  main_gui.py
src/automation/: __init__.py  clipboard.py  hotkeys.py  keyboard.py  mouse.py  win32_automation.py
src/config/: __init__.py  coordinates.py  game_data.py  settings.py
src/core/: __init__.py  actions.py  macro.py  parser.py  state.py
src/gui/: __init__.py  app.py  system_tray.py
src/gui/charts/: __init__.py  bar_chart.py  line_chart.py
src/gui/dialogs/: __init__.py  calibration_dialog.py  settings_dialog.py
src/gui/widgets/: __init__.py  control_panel.py  info_log_panel.py  log_panel.py  stats_panel.py  status_panel.py  system_log_panel.py
src/stats/: __init__.py  collector.py  models.py
src/strategy/: __init__.py  base.py  heuristic.py
src/utils/: __init__.py  logger.py  single_instance.py
tests/: test_parser.py
